--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,8 @@
     <title>CineFlex</title>
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
+    <link rel="icon" href="favicon.ico" type="image/x-icon">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
